--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -8,7 +8,8 @@
   },
 
   "ConnectionStrings": {
-    "DBConnection": "Data Source = ACERBOGDAN; Initial Catalog = mydb; User ID=root; Password = 0000;"
+    
+    "DbConnection": "server = localhost,user=root; database=mydb; password=0000;port=3306"
   },
 
 
