--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,7 +9,7 @@
 
   "ConnectionStrings": {
     
-    "DbConnection": "server = localhost,user=root; database=mydb; password=0000;port=3306"
+    "DbConnection": "Server = localhost; database=mydb; user=root; password=0000"
   },
 
 
