--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -8,8 +8,9 @@
   },
 
   "ConnectionStrings": {
-    
-    "DbConnection": "Server = localhost; database=mydb; user=root; password=0000"
+
+    //"DbConnection": "Server = localhost; database=MyDB; user=root; password=0000",
+    "BaseConnect": "Server = root@127.0.0.1; database=mydb; user=root; password=0000"
   },
 
 
