clean up, rework services, remove repositories, word with domain models

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -3,20 +3,20 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>6b45d6f3-9d9a-4661-843a-85a7cfb246dd</UserSecretsId>
-    <RootNamespace>WebApplication1</RootNamespace>
+    <RootNamespace>Web</RootNamespace>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels" />
+    <Folder Include="wwwroot\img\news-img" />
   </ItemGroup>
 
 </Project>
