--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -9,12 +9,9 @@
 
   "ConnectionStrings": {
 
-    //"DbConnection": "Server = localhost; database=MyDB; user=root; password=0000",
-    "BaseConnect": "Server = root@127.0.0.1; database=mydb; user=root; password=0000"
+    //"ProdConnect": "Server = localhost; database=MyDB; user=root; password=0000",
+    "DevConnect": "Server=localhost\\SQLEXPRESS;Database=DevChugBibl;Trusted_Connection=True;"
   },
-
-
-
-
+  
   "AllowedHosts": "*"
 }
