--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Database\Migrations" />
     <Folder Include="wwwroot\img\news-img" />
   </ItemGroup>
 
